# esatto

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
esatto/: app.py
esatto/address/: model.py
esatto/data/: patients.json
esatto/data_loader/: json_loader.py  patients_loader.py
esatto/db/model/: address.py  patient.py
esatto/db/repo/: address.py  connection.py  crud.py  patient.py
esatto/logger/: model.py
esatto/patient/: model.py  service.py  types.py  validator.py
src/: docs.py  index.ts  main.py  models.py
src/controllers/: authentication.ts  patients.ts  users.ts
src/db/: patients.ts  users.ts
src/helpers/: index.ts
src/middlewares/: index.ts
src/router/: authentication.ts  index.ts  patients.ts  users.ts
src/users/: crud.py  router.py  schemas.py
tests/test_data_loader/: test_json_loader.py  test_patient_loader.py
tests/test_patient/: test_service.py
tests/test_validator/: test_text.py
