[tool.poetry]
name = "esatto"
version = "0.1.0"
description = ""
authors = ["SzymiYay <szymoon09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^8.3.0"
python-dotenv = "^1.0.1"
inflection = "^0.5.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
